--- a/OPENHAB/openhab-2.5.8/userdata/config/org/openhab/addons.config
+++ b/OPENHAB/openhab-2.5.8/userdata/config/org/openhab/addons.config
@@ -1,5 +1,5 @@
-:org.apache.felix.configadmin.revision:=L"3"
-binding="yeelight"
+:org.apache.felix.configadmin.revision:=L"4"
+binding="yeelight,network"
 package="expert"
 service.pid="org.openhab.addons"
 transformation="map,regex,xslt,exec,javascript,scale,xpath,jsonpath"
